# agentmesh

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  PRIVACY.md  README.md  SECURITY.md  generate_store_assets.py  pyproject.toml
.github/workflows/: ci.yml  codeql.yml
agentmesh/: __init__.py  cli.py  core.py  server.py
agentmesh-extension/: generate_icons.py  manifest.json
agentmesh-extension/_metadata/generated_indexed_rulesets/: _ruleset1
agentmesh-extension/background/: service_worker.js
agentmesh-extension/content/: interceptor.js  styles.css
agentmesh-extension/popup/: popup.css  popup.html  popup.js
agentmesh-extension/rules/: redirect_rules.json
agentmesh/approval/: __init__.py  gateway.py
agentmesh/attribution/: __init__.py  chargebacks.py
agentmesh/audit/: __init__.py  trail.py
agentmesh/bridge/: __init__.py  bpmn.py
agentmesh/budget/: __init__.py  enforcer.py
agentmesh/cache/: __init__.py  redis_backend.py  semantic.py
agentmesh/compliance/: __init__.py  pdf_report.py  readiness.py  reporter.py
agentmesh/events/: __init__.py  bus.py
agentmesh/identity/: __init__.py  keys.py
agentmesh/integrations/: __init__.py  autogen.py  crewai.py  google_adk.py  haystack.py  langgraph.py  nvidia_nim.py  openai_agents.py  pydantic_ai.py  saml_handler.py  webhooks.py
agentmesh/mcp/: __init__.py  wrapper.py
agentmesh/monitoring/: anomaly_detector.py  otel_exporter.py
agentmesh/optimizer/: __init__.py  circuit_breaker.py  compressor.py  cost_optimizer.py  embedder.py  health_monitor.py  multi_vendor.py  normalizer.py  router.py
agentmesh/policy/: __init__.py  engine.py  schema.py
agentmesh/proxy/: __init__.py  forwarder.py  middleware.py  server.py
agentmesh/quota/: __init__.py  engine.py  escalation.py
agentmesh/security/: injection_detector.py  pii_scanner.py  toxicity_filter.py
agentmesh/templates/: __init__.py  customer_service.yaml  enterprise.yaml  eu_ai_act_high_risk.yaml  fintech.yaml  healthcare.yaml  nvidia_nim.yaml  research.yaml
docs/: architecture.md  blog-how-i-cut-agent-bill-70-percent.md  cookbook.md  deploying-to-kubernetes.md  getting-started.md  policy-reference.md  social-posts.md
examples/: benchmark.py  dashboard_terminal.py  dashboard_web.py  demo.py  make_demo_gif.py  quickstart.py  simulation.py  test_extension_e2e.py
spaces/: README.md  app.py
tests/: test_approval_gateway.py  test_approval_proxy.py  test_async.py  test_attribution.py  test_cache.py  test_cli_demo.py  test_compliance.py  test_core.py  test_mcp_wrapper.py  test_otel_exporter.py  test_readiness.py  test_templates.py  test_virtual_keys.py  test_virtual_keys_proxy.py
