[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentmesh-proxy"
version = "0.3.1"
description = "Governance proxy for every AI tool — PII/PHI masking, prompt injection detection, anomaly alerts, semantic cache, token quotas, vendor routing, compliance reports"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Anil Prasad", email = "meetanilp@gmail.com" }]
keywords = [
    "ai", "agents", "governance", "llm", "token-optimization",
    "budget-enforcement", "audit-trail", "langgraph", "crewai",
    "multi-agent", "cost-control", "enterprise-ai", "semantic-cache",
    "compliance", "eu-ai-act", "hipaa", "soc2", "autogen", "nvidia-nim",
    "policy-as-code", "circuit-breaker", "chargeback",
    "proxy", "openai-compatible", "anthropic", "chatgpt", "claude",
    "chrome-extension", "cost-reduction", "caching", "quota",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
    "Topic :: System :: Monitoring",
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "cryptography>=41.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "numpy>=1.24",
]

[project.optional-dependencies]
langgraph = ["langgraph>=0.2", "langchain>=0.2"]
crewai = ["crewai>=0.70"]
openai = ["openai>=1.50", "openai-agents>=0.0.5"]
compression = ["llmlingua>=0.2"]
otel = [
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp-proto-grpc>=1.25",
]
huggingface = ["gradio>=4.0"]
semantic = ["sentence-transformers>=2.6"]
redis = ["redis>=5.0"]
pdf = ["reportlab>=4.0"]
all = [
    "agentmesh[langgraph,crewai,openai,compression,otel,semantic,redis,pdf]",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "black>=24.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/anilatambharii/agentmesh"
Documentation = "https://github.com/anilatambharii/agentmesh/tree/main/docs"
Repository = "https://github.com/anilatambharii/agentmesh"
Issues = "https://github.com/anilatambharii/agentmesh/issues"
Changelog = "https://github.com/anilatambharii/agentmesh/blob/main/CHANGELOG.md"
"HuggingFace Space" = "https://huggingface.co/spaces/anilatambharii/agentmesh"
"PyPI" = "https://pypi.org/project/agentmesh-proxy/"

[project.scripts]
agentmesh = "agentmesh.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["agentmesh"]

[tool.hatch.build.targets.wheel.sources]
"agentmesh" = "agentmesh"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
